[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/pollution.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/font/matchup_pro.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/settings_panel.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
margin_left = 4.0
margin_right = 44.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OverLay" type="ColorRect" parent="Pause"]
margin_left = 262.953
margin_top = 81.6577
margin_right = 302.953
margin_bottom = 121.658
rect_scale = Vector2( 15.2952, 11.295 )
color = Color( 0.0431373, 0, 0, 0.341176 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="Pause"]
margin_left = 440.502
margin_top = 48.4512
margin_right = 480.502
margin_bottom = 88.4512
rect_scale = Vector2( 5.87815, 3.02863 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Pause/ViewportContainer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Pause/ViewportContainer/CenterContainer"]
margin_left = 3.0
margin_top = 13.0
margin_right = 37.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "Pause"

[node name="Buttons" type="VBoxContainer" parent="Pause"]
margin_left = 463.0
margin_top = 181.0
margin_right = 528.0
margin_bottom = 269.0
rect_scale = Vector2( 2.8569, 3.2061 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Pause/Buttons"]
margin_right = 65.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="Pause/Buttons"]
margin_top = 23.0
margin_right = 65.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pollution" type="Button" parent="Pause/Buttons"]
margin_top = 46.0
margin_right = 65.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 3 )
text = "Pollution"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Pause/Buttons"]
margin_top = 69.0
margin_right = 65.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 4 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Exit" type="Button" parent="Settings"]
margin_left = 15.1361
margin_top = 516.902
margin_right = 75.1361
margin_bottom = 535.902
rect_scale = Vector2( 1.8906, 1.95906 )
custom_fonts/font = SubResource( 4 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pollution" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = -39.0
margin_top = 10.0
margin_right = -39.0
margin_bottom = 10.0

[node name="Exit" type="Button" parent="Pollution"]
margin_left = 312.0
margin_top = 474.0
margin_right = 372.0
margin_bottom = 493.0
rect_scale = Vector2( 1.8906, 1.95906 )
custom_fonts/font = SubResource( 4 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Pause/Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Pause/Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Pause/Buttons/Pollution" to="." method="_on_Pollution_pressed"]
[connection signal="pressed" from="Pause/Buttons/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Settings/Exit" to="Settings" method="_on_Exit_pressed"]
[connection signal="pressed" from="Pollution/Exit" to="." method="_on_pollution_Exit_pressed"]
